# megalodon-hf

./: .gitignore  README.md  pyproject.toml
docs/: PAPER_DEVIATIONS.md  dev.md  ema-implementation.md  long_context_streaming.md  profiling.md
scripts/: profile_ops.py
src/megalodon/: __init__.py  configuration_megalodon.py  modeling_megalodon.py
tests/: test_megalodon_smoke.py  test_megalodon_training.py
