[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "megalodon-hf"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
  "torch>=2.6",
  "transformers>=4.45",
]

[project.optional-dependencies]
tests = [
  "pytest>=7.0",
  "accelerate",
]
dev = [
  "pytest>=7.0",
  "accelerate",
  "ruff>=0.5",
]
all = [
  "pytest>=7.0",
  "accelerate",
  "ruff>=0.5",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["megalodon*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
  "cuda: tests that require a CUDA-capable device",
]
