[build-system]
requires = ["setuptools>=68", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "megalodon-hf"
dynamic = ["version"]
requires-python = ">=3.9"
dependencies = [
  "torch>=2.6",
  "transformers>=4.45",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "accelerate",
  "ruff>=0.5",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["megalodon*"]

[tool.setuptools_scm]
write_to = "src/megalodon/_version.py"

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
  "cuda: tests that require a CUDA-capable device",
]
